--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
                         <h2>About Aifa.</h2>
                         <p> Im a highly ambitious one who really wants to achieve great things in life.Basically its my turning point to change my career to an IT field,but im Seriously ready to take all the advantages and challenges,Be sure that just faith in yourself and your determination </p>
 						<p>Now Im here for becoming a MERN Stack Developer,MERN Stack is a JavaScript Stack that is used for easier and faster deployment of full-stack web applications. MERN Stack comprises of 4 technologies namely: MongoDB, Express, React and Node.js. It is designed to make the development process smoother and easier.</p>
+<a href="cv/mycv.pdf" target="_blank" class="sim-btn btn-hover-new" data-text="View CV">
+  <span>View CV</span>
+</a>
 
-                        <a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
